# VinMod

./: .gitignore  Cargo.toml  README.md  cachyos-deb.sh
build-artifacts/: BUILD_STATUS.txt  build-manifest.txt  kernel-profile.fragment  vinmod-kernel-6.19.12-deb.deb
build-artifacts/bundle/: system-snapshot.txt
build-artifacts/bundle/vinmod-kernel-6.19.12-deb/DEBIAN/: control
build-artifacts/bundle/vinmod-kernel-6.19.12-deb/usr/share/vinmod/: build-info.txt  system-optimizations.txt
src/: lib.rs  main.rs
src/core/: builder.rs  mod.rs  service.rs
src/infra/: filesystem.rs  mod.rs  process.rs
src/ui/: form.rs  mod.rs  window.rs
