[package]
name = "vinmod"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.7.3"
libadwaita = { version = "0.5.3", features = ["v1_4"] }
glib = "0.18"
tokio = { version = "1.36", features = ["full"] }
async-process = "2.1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[lib]
name = "vinmod_kernel"
path = "src/lib.rs"

[[bin]]
name = "vinmod"
path = "src/main.rs"
